--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ android {
 
 dependencies {
 
+    implementation project(':data')
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
