--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,11 @@ buildscript {
     }
     dependencies {
 
-        classpath "com.android.tools.build:gradle:7.0.0"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.11"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
