--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id "com.apollographql.apollo"
 }
 
 android {
@@ -32,10 +33,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
@@ -56,7 +61,16 @@ dependencies {
     api "androidx.room:room-ktx:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
 
+    //Apollo
+    implementation "com.apollographql.apollo:apollo-runtime:2.5.11"
+    implementation "com.apollographql.apollo:apollo-coroutines-support:2.5.11"
+    implementation "com.apollographql.apollo:apollo-api:2.5.11"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+apollo {
+    generateKotlinModels.set(true)
 }
