--- a/data/build.gradle
+++ b/data/build.gradle
@@ -18,6 +18,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        def token = properties.getProperty("token")
+        buildConfigField "String", "TOKEN", token
+
     }
 
     buildTypes {
@@ -62,9 +68,9 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
 
     //Apollo
-    implementation "com.apollographql.apollo:apollo-runtime:2.5.11"
-    implementation "com.apollographql.apollo:apollo-coroutines-support:2.5.11"
-    implementation "com.apollographql.apollo:apollo-api:2.5.11"
+    api "com.apollographql.apollo:apollo-runtime:2.5.11"
+    api "com.apollographql.apollo:apollo-coroutines-support:2.5.11"
+    api "com.apollographql.apollo:apollo-api:2.5.11"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
