--- a/data/build.gradle
+++ b/data/build.gradle
@@ -55,10 +55,7 @@ dependencies {
     implementation "com.google.dagger:dagger:2.40"
     kapt "com.google.dagger:dagger-compiler:2.40"
 
-    //Retrofit
-    api "com.squareup.retrofit2:retrofit:2.9.0"
-    api "com.squareup.retrofit2:converter-gson:2.9.0"
-    api "com.squareup.retrofit2:converter-moshi:2.8.1"
+    //OkHttp
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.2"
     api "com.google.code.gson:gson:2.8.7"
 
